# devops-new-crawler

./: README.md  pyproject.toml
.github/workflows/: lint-python.yml  pytest.yml  test_crawler.yml  test_db.yml
src/: READMD.md  config.py  database.py  main.py
tests/: test_database.py  test_scraper.py
